<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright © 2015 The Gravitee team (http://gravitee.io)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.gravitee.singularitee</groupId>
        <artifactId>gravitee-singularitee</artifactId>
        <version>1.2.0</version>
    </parent>

    <artifactId>gravitee-singularitee-engine</artifactId>

    <name>Gravitee.io - Singularitee - Engine API</name>
    <description>Domain model for AI inference engines: interfaces, records, enums, pipeline context, evaluators, and registries. Shared across all modules without pulling in gRPC or Vert.x infrastructure.</description>

    <dependencies>
        <!-- Protocol (protobuf-generated classes used by PipelineContext, evaluators, registries) -->
        <dependency>
            <groupId>io.gravitee.singularitee</groupId>
            <artifactId>gravitee-singularitee-protocol</artifactId>
        </dependency>

        <!-- Inference API (TagConfig, shared types) -->
        <dependency>
            <groupId>io.gravitee.singularitee.inference</groupId>
            <artifactId>gravitee-singularitee-inference-api</artifactId>
        </dependency>

        <dependency>
            <groupId>io.gravitee.jinja4j</groupId>
            <artifactId>jinja4j</artifactId>
        </dependency>

        <!-- RxJava3: reactive types used in engine interfaces -->
        <dependency>
            <groupId>io.reactivex.rxjava3</groupId>
            <artifactId>rxjava</artifactId>
        </dependency>

        <!-- JSON (de)serialization: patching tool template JSON on injection -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <!-- Gravitee Node API: OpenTelemetry Tracer / Span / InternalRequest types used
             for the (nullable) pipeline/step/model tracing seam. Pulls io.opentelemetry.api
             (SpanKind) transitively. -->
        <dependency>
            <groupId>io.gravitee.node</groupId>
            <artifactId>gravitee-node-api</artifactId>
        </dependency>
        <!-- Tracing API used directly (io.opentelemetry.api.trace); declared rather than
             relied on through gravitee-node. -->
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-api</artifactId>
        </dependency>
        <!-- Standalone in-memory cache impl, tests only: TodoSessionStore tests run
             against the real thing instead of a mock. Production wiring lives in the
             container (pluggable CacheManager bean). -->
        <dependency>
            <groupId>io.gravitee.node</groupId>
            <artifactId>gravitee-node-cache-plugin-standalone</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.gravitee.node</groupId>
            <artifactId>gravitee-node-cache-common</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Required by the standalone cache plugin above: StandaloneCache's static
             initializer loads io.gravitee.node.logging.NodeLoggerFactory. -->
        <dependency>
            <groupId>io.gravitee.node</groupId>
            <artifactId>gravitee-node-logging</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Micrometer: inference metrics API (MeterRegistry / Counter / Timer). The
             Prometheus backend stays in the container; the engine only references the API. -->
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-core</artifactId>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <scope>compile</scope>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>21</release>
                    <compilerArgs combine.self="override"/>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <release>21</release>
                    <additionalOptions combine.self="override"/>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
